tweaked site css, improved formatting, started styling services page

--- a/home.html
+++ b/home.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 	<header id="nav-header">
-		<div>
+		<div id="logo">
 			<h1>T E A C U P   W O O Z Y<br>
 			<span>personalized travel planning</span></h1>
 		</div>
@@ -69,7 +69,7 @@
 				<br>
 				<div class="home-small-box">
 					<h4>INSPIRE</h4>
-					<p>Because I live and breathe all-things-travel, I've got a lot of creative ideas for how my clients can make the most of their travels. As a bonus, I sometimes present my clients with “Wildcard” ideas for their trips.</p>
+					<p>I live and breathe all-things-travel, so I have a lot of creative ideas for how to make the most of your travels. As a bonus, I sometimes present my clients with “Wildcard” ideas for their trips.</p>
 				</div>
 				<br><br>
 				<!-- Call to action -->
@@ -93,6 +93,7 @@
 
 		<!-- Testimonials -->
 		<article class="bumpers">
+			<br><br>
 			<header><h2>WHAT MY CLIENTS ARE SAYING</h2></header>
 			<div class="container">
 				<div class="grid">
@@ -111,10 +112,11 @@
 
 		<!-- Why we travel -->
 		<article class="bumpers">
+			<br><br>
 			<header><h2>WHY WE TRAVEL</h2></header>
 			<div class="background-ocean-box">
 				<br><br>
-				<p>For my clients, travel is about more than just ticking off items on a destination bucket list.Travel can be about reconnecting with yourself and the people you love. It can be about making connections with total strangers in ways that transcend language and borders. And, travel can be a totally immersive experience that stays with you for years afterward.</p>
+				<p>For my clients, travel is about more than just ticking off items on a destination bucket list. Travel can be about reconnecting with yourself and the people you love. It can be about making connections with total strangers in ways that transcend language and borders. And, travel can be a totally immersive experience that stays with you for years afterward.</p>
 				<p>I love designing these personalized travel experiences for my clients and keeping them far, far away from overcrowded and uninspiring cookie-cutter vacations. Instead, I want my clients to be able to experience the things that are interesting and meaningful to them.</p>
 				<p>I take care of the planning details and make sure you have a wonderful selection of the types of accommodations, flights, and experiences you have your heart set on. But, more importantly, I also make sure that the trip I plan for you has the right vibe that you're going for and sets you on your way to having incredible experiences.</p>
 				<p>In other words, if you're looking for something more than a selfie in front of the Mona Lisa, then I'm the one for you. Click the button below to get started and learn more about my travel planning service.</p>
@@ -132,13 +134,11 @@
 		<h4 class="newsletter">SIGN UP FOR MY ALL-THINGS-TRAVEL NEWSLETTER!</h4>
 		<h5>Two or three times a month, get hand-curated travel news and stories sent right to your inbox.</h5>
 		<h5>Sign up <a href="http://eepurl.com/dfZ7wr" target="_blank">here</a>!</h5>
-
+		<br><br>
 		<!-- flexbox -->
 		<div class="footer-container">
 			<div>
 				<p><a href="legal.html">Privacy Policy</a> | <a href="legal.html">Terms of Service</a> | <a href="legal.html">Disclaimers & Liability</a> | <a href="legal.html">Use of Cookies</a> (no, not those kinds)</p>
-			</div>
-			<div>
 				<p>Copyright &copy; 2018 Teacup Woozy LLC || All rights reserved.</p>
 			</div>
 		</div>
