--- a/about.html
+++ b/about.html
@@ -3,78 +3,114 @@
 <head>
 	<meta charset="utf-8">
 	<title>Teacup Woozy | Personalized Travel Planning | Blog</title>
+	<link href="https://fonts.googleapis.com/css?family=Montserrat:300,400" rel="stylesheet">
+	<link rel="stylesheet" type="text/css" href="tw.css">
 </head>
 <body>
-	<header>
-		<!-- INSERT HEADER ONCE COMPLETED -->
+	<header id="nav-header">
+		<div id="logo">
+			<h1>T E A C U P   W O O Z Y<br>
+			<span>personalized travel planning</span></h1>
+		</div>
+
+		<nav id="nav-container">
+			<a href="#" id="menu-icon"></a>
+			<ul>
+				<li class="nav-menu"><a href="home.html">Home</a></li>
+				<li class="nav-menu"><a href="services.html">Services</a></li>
+				<li class="nav-menu"><a href="blog.html">Blog</a></li>
+				<li class="nav-menu"><a href="about.html">About</a></li>
+				<li class="nav-menu"><a href="contact.html">Contact</a></li>
+			</ul>
+		</nav>	
 	</header>
 	
-	<section class="bumpers">
+	<section class="nav-padding">
 		<!-- About Stacy -->
-		<article>
-			<img src="images/stacy-profile-photo-small.jpg">
-			<header><h2>ABOUT TEACUP WOOZY</h2></header>
-			<h4>HI, I'M STACY</h4>
-			<p>I’m the owner of Teacup Woozy, a personalized travel planning company, and I started this business because over the years I had seen too many people get caught up and overwhelmed with trying to plan a “perfect” trip. They’d end up losing sight of why they wanted to travel in the first place, get frustrated and lost in the details, and they’d frequently end up disappointed with how their trip turned out. Others have such busy, hectic lives that they put off going on those special trips because they simply don't have the time to plan it - so they settle for thrown-together trips that are never quite what they are looking for.</p>
+		<br>
+		<h2>ABOUT TEACUP WOOZY</h2>
+		<article id="about-container">
+			<br><br>
+			<img src="images/stacy-profile-photo-small.jpg" alt="Headshot of Stacy" id="about-photo">
+			
+			<header><h3>HI, I'M STACY</h3></header>
+			<p>I’m the owner of Teacup Woozy, a personalized travel planning company, and I started this business because over the years I have seen too many people get caught up and overwhelmed with trying to plan a “perfect” trip. Because of time constraints or feeling overwhelmed, they’d end up losing sight of why they wanted to travel in the first place. And, they’d frequently end up disappointed with how their trip turned out. </p>
+			<br>
 			<h5>This is where I can step in and help you.</h5>
 			<p>I believe that we can all have amazing travel experiences: perfect lodgings, delicious meals, do and see things that are totally amazing to you. And, most importantly, I love helping people to have those extraordinary trips - I really care about my clients and I want you to have the kind of travel that makes you thrilled to be alive!</p>
+			<br>
 			<h5>I have been planning travel all around the world - for myself, for friends, and for family - for more than thirteen years.</h5>
-			<p>I’ve sorted through all the details and planned some really incredible trips: six-months backpacking across Europe, a long weekend in Estonia with a day trip over to Finland, three weeks in Iceland (before Iceland was cool!) two foodie-centric weeks in San Miguel de Allende, Mexico (with cooking classes, market tours, and some truly delicious street food!), three weeks in China, and so much more! Through years of experience, learning, reading, networking, and traveling, I have tons of tricks up my sleeve to help you have your own amazing trip. What are you waiting for?</p>
-			<h5>I believe that travel and experiencing other cultures make us better global citizens.</h5>
-			<p>I am so fortunate that I get to help people to learn about and experience other parts of the world, and it is a privilege that I take seriously. Travel is my passion and helping others to do it is an honor.</p>
-			<p>You can keep scrolling to see some of my favorite travel moments and then head on over to my Services page to read more about how I can help you to have some wonderful travel experiences.</p>
+			<p>I’ve sorted through all the details and planned some really incredible trips: six-months backpacking across Europe, a long weekend in Estonia with a day trip over to Finland, three weeks in Iceland (before Iceland was cool!) foodie-centric trips to Mexico (with cooking classes, market tours, and some truly delicious street food!), and three weeks in China!</p>
+			<br>
+			<h5>I also believe that travel and experiencing other cultures make us better global citizens.</h5>
+			<p>Travel is my passion and helping others to do it is an honor.</p>
+			<br>
+			<p>You can keep scrolling to see some of my favorite travel moments and then head on over to my <a href="/services.html">Services</a> page to read more about how I can help you to have wonderful travel experiences.</p>
+			<br><br>
 		</article>
 
 		<!-- Travel photo gallery -->
 		<article>
-			<header><h2>MY TRAVEL PHOTO ALBUM</h2></header>
+			<header><h2>TRAVEL PHOTO ALBUM</h2></header>
+			<p>Photo album coming soon!</p>
+			<br><br>
 			<!-- INSERT PHOTO GALLERY +++++  Bootstrap??? -->
 		</article>
 		<!-- Q&A travel favorites -->
 		<article>
 			<header><h2>TRAVEL FAVORITES</h2></header>
-			<h4>My favorite meal</h4>
+			<h5>My favorite meal</h5>
 			<p>A four-course feast at a perfect little traditional bistro in the 12th arrondissement in Paris.  It was there that I also started my love affair with Armagnac. The bistro isn't too expensive and the memories of eating there will last a lifetime. Let me know if you’re planning a trip to Paris and I can tell you where this little gem is.</p>
-			<h4>My favorite off the beaten path moment</h4>
+			<br>
+			<h5>My favorite off the beaten path moment</h5>
 			<p>It might have been when I accidentally hitchhiked after only having been in Mexico for a few hours. I truly didn’t mean to hitchhike at that moment, but when you’re somewhat stranded out in the countryside and a woman your mom’s age pulls over on the side of the road next to where you’re standing and asks ¿Dónde va? You tell her and then you hop in.</p>
-			<h4>My favorite “normal life” activity to do in other countries</h4>
+			<br>
+			<h5>My favorite “normal life” activity to do in other countries</h5>
 			<p>I love going to the movies in other countries. I’ve lost count of how many movies I’ve seen while traveling, but over the years I’ve learned there are all sorts of different customs and norms when it comes to watching movies around the world. And, different snacks too! Some of my more memorable movie experiences have been a raunchy American comedy in Poland, a tear-jerker sister flick in Melbourne, a British indie film in Mexico, and days upon days of films at the Berlin Film Festival!</p>
-			<h4>The most ambitious time zone hopping</h4>
+			<br>
+			<h5>The most ambitious time zone hopping</h5>
 			<p>After having spent 10 days in London, I flew to Seattle for two days, and then onto Maui for a week, and then back to Seattle.</p>
-			<h4>Most unusual method of transportation</h4>
+			<br>
+			<h5>Most unusual method of transportation</h5>
 			<p>I once crossed a frozen sea in an icebreaker ship.</p>
-			<h4>My favorite place to sleep when traveling</h4>
+			<br>
+			<h5>My favorite place to sleep when traveling</h5>
 			<p>Trains! Stick me on a train and I’m out like a light within a few minutes.</p>
+			<br><br>
 		</article>
 		<!-- Testimonials -->
 		<article>
 			<header><h2>WHAT MY CLIENTS ARE SAYING</h2></header>
-			<div class="testimonial-container">
-				<div class="testimonial-box">
-					<p><span class="quotes">"</span>I was very satisfied and thought the level of detail was above and beyond!<span class="quotes">"</span></p>
-					<p class="testimonial-client">Michelle S.</p>
-					<p class="testimonial-client">Besties camping trip to Tasmania</p>
-				</div>
-				<div class="testimonial-image">
-					<img src="images/cradle-mountain-tasmania-australia.jpg" alt="View of a lake at Cradle Mountain in Tasmania, Australia">
+
+			<div class="container">
+				<div class="grid">
+					<div class="testimonial-cell testimonial-about">
+						<img src="images/client-testimonial-tazmania.jpg" alt="Client Michelle: I was very satisfied and I found the level of detail was above and beyond!" class="responsive-image">
+					</div>
+					<div class="testimonial-cell testimonial-about">
+						<img src="images/client-testimonial-lake-district-2.jpg" alt="Client Colleen: Your were super thoughtful in researching and presenting us with $-$$$ options for activities and accommodations." class="responsive-image">
+					</div>
 				</div>
 			</div>
-			<div class="testimonial-container">
-				<div class="testimonial-box">
-					<p><span class="quotes">"</span>You were super thoughtful in researching and presenting us with $-$$$ options for activities and accommodations.<span class="quotes">"</span></p>
-					<p class="testimonial-client">Colleen H.</p>
-					<p class="testimonial-client">Mother/daughter trip to the Lake District</p>
-				</div>
-				<div class="testimonial-image">
-					<img src="images/lake-district-england.jpg" alt="English countryside in the Lake District">
-				</div>
-			</div>	
+			<br><br>
 		</article>
 
 	</section>
 
 	<footer>
 		<!-- INSERT FOOTER ONCE COMPLETED -->
+		<br>
+		<h4 class="newsletter">SIGN UP FOR MY ALL-THINGS-TRAVEL NEWSLETTER!</h4>
+		<h5>Two or three times a month, get hand-curated travel news and stories sent right to your inbox.</h5>
+		<h5>Sign up <a href="http://eepurl.com/dfZ7wr" target="_blank">here</a>!</h5>
+		<br><br>
+		<!-- flexbox -->
+		<div class="footer-container">
+			<div>
+				<p><a href="legal.html">Privacy Policy</a> | <a href="legal.html">Terms of Service</a> | <a href="legal.html">Disclaimers & Liability</a> | <a href="legal.html">Use of Cookies</a> (no, not those kinds)</p>
+				<p>Copyright &copy; 2018 Teacup Woozy LLC || All rights reserved.</p>
+			</div>
+		</div>
 	</footer>
 </body>
 </html>
