--- a/services.html
+++ b/services.html
@@ -27,21 +27,28 @@
 </header>
 	<section class="nav-padding">
 	<!-- Main content -->
+
+	<!-- THIN OUT ALL COPY! YE WEE WINDBAG! XOXO!!  -->
 	<!-- Air travel planning -->
+	<br>
 	<h2>TRAVEL PLANNING SERVICES</h2>
 	<!-- flights -->
 	<article class="services-container">
 		
-		<header class="services-left">
+		<header class="services-cell services-left">
+			<br>
 			<h3>AIR TRAVEL PLANNING</h3>
 			<img src="images/airplane-icon.png" alt="black and white icon of airplane">
 		</header>
-		<div class="services-right">
-			<h4>Get the best routes, connections, and pricing for your destination.</h4>
+		<div class="services-cell services-right">
+			<h4>Air Travel Planning Package: Get the best routes, connections, and pricing for your destination.</h4>
 			<p>Researching flight itineraries, routes, airlines, stopovers, and prices can be a ton of work, and it can be frustrating. I can make your life easier by doing all of that work for you. And, because I have years of experience finding great routes and great prices, I save my clients time and money all the time.</p>
-			<h5>$45 PER DESTINATION</h5>
+			<br>
 			<button class="button" onclick="#">I'M INTERESTED!</button>
-			<h5>WHAT'S INCLUDED</h5>
+			<br><br>
+			<h5>$45 PER DESTINATION <br><br>
+				WHAT'S INCLUDED:</h5>
+				<br>
 			<ul class="included-list">
 				<li>A handful of flight options based on your priorities (cost, total travel time, and the number of flights)</li>
 				<li>The pros and cons of the different fights/airlines</li>
@@ -50,123 +57,120 @@
 				<li>All of your trip information is provided in a convenient electronic format.</li>
 			</ul>
 		</div>
+		<br><br>
 	</article>
 	<!-- accommodations -->
 	<article class="services-container">
-		<header class="services-left">
+		<header class="services-cell services-left">
+			<br>
 			<h3>ACCOMMODATIONS PLANNING</h3>
 			<img src="images/hotel-icon.png" alt="black and white icon of a bed">
 		</header>
-		<div class="services-right">
-			<h4>I will sort through dozens, if not hundreds, of accommodations and curate a small selection that I believe will really suit you and the trip you have in mind.</h4>
-			<p>Sorting through dozens, if not hundreds, of accommodations listings and reviews can be an incredibly time-consuming task. And, quite frankly, it can be overwhelming for a lot of people.</p>
-			<p>And, when you aren't familiar with the destination, it's easy to inadvertently pick the wrong place to stay. Over the years, I’ve heard countless stories from disappointed travelers who, despite their best efforts, still ended up staying at the wrong place: outer edges of the city that required they travel an hour on the metro each way, sterile hotels with no charm of the city they’re staying in, an Airbnb that was nothing like what the photos showed. Unfortunately, the list goes on and on.</p>
+		<div class="services-cell services-right">
+			<h4>Accommodations Planning Package: I will sort through dozens, if not hundreds, of accommodations and curate a small selection of accommodations.</h4>
+			<p>Sorting through accommodations listings and reviews can be an incredibly time-consuming task. And, quite frankly, it can be overwhelming for a lot of people.</p>
 			<p>The perfect places to stay are out there, and I can find them for you.</p>
-			<p>Based on your answers to the questionnaire below, I will identify three or five accommodations that will fit with what you're looking for in your vacation. Then, all you’ll have to do is pick the one you like best and book it. Using my services will save you hours and hours of laborious searching, as well as the heartache of picking the wrong place.</p>
-			<h5>PRICES START AT $60</h5>
+			<br>
 			<button class="button" onclick="#">I'M INTERESTED!</button>
-			<h5>WHAT'S INCLUDED</h5>
-			<ul>
+			<br><br>
+			<h5>PRICES START AT $60 <br><br>
+				WHAT'S INCLUDED:</h5>
+				<br>
+			<ul class="included-list">
 				<li>A carefully curated list of three or five accommodations, based on your wants and needs.</li>
 				<li>Contact information, pricing, features, and amenities for each accommodation.</li>
 				<li>Details about the surrounding areas. </li>
-				<li>Any pertinent pros or cons for the accommodation - I strive for total transparency so that you can make informed decisions about where you'll stay. So, if an accommodation is perfect in every way, but all of the reviews mention roosters crowing at the crack of dawn, I'm going to tell you!</li>
-				<li>And, sometimes, I throw in an extra Wildcard accommodation at no additional cost to you. These accommodations are options that don't fit the specs provided by the client, but there is something special about them that could be a good fit for the client.</li>
+				<li>Any pertinent pros or cons for the accommodation - I strive for total transparency so that you can make informed decisions about where you'll stay.</li>
 				<li>All of your trip information is provided in a convenient electronic format.</li>
 			</ul>
 		</div>
-		
+		<br><br>
 	</article>
 	<!-- Standard travel planning -->
 	<article class="services-container">
-		<header class="services-left">
+		<header class="services-cell services-left">
+			<br>
 			<h3>STANDARD TRAVEL PLANNING</h3>
 			<img src="images/suitcase-icon.png" alt="black and white icon of a suitecase">
 		</header>
-		<div class="services-right">
-			<h4>Get all of your basics covered: air travel research, accommodations shortlist, visa requirements, and destination basics</h4>
-			<p>Planning an amazing vacation can take an incredible amount of time - something a lot of people don't ever have enough of. And, if you don't have a lot of experience planning travel, it can also be overwhelming.</p>
-			<p>So many people are hardpressed to find the time and the patience to research and plan travel, that they keep putting off those dream vacations or they settle for something that's less than what they really want.</p>
+		<div class="services-cell services-right">
+			<h4>Standard Travel Planning Package: Get all of the basics for your trip covered.</h4>
+			<p>Planning an amazing vacation can take an incredible amount of time - something a lot of people don't ever have enough of.</p>
 			<p>With this travel planning package, I will take care of researching all of the basics for you - saving you time and frustration. And, most importantly, we can make your trip a reality.</p>
-			<h5>$130 PER DESTINATION</h5>
+			<br>
 			<button class="button" onclick="#">I'M INTERESTED!</button>
-			<h5>WHAT'S INCLUDED</h5>
-			<ul>
-				<li>A handful of flight options based on your priorities (cost, total travel time, and the number of flights).</li>
-				<li>The pro and cons of the different fights/airlines.</li>
-				<li>Suggestions on when to purchase airfare.</li>
-				<li>A carefully curated list of five accommodations, based on your wants and needs. It includes contact information, pricing, features, and amenities for each accommodation, as well as any pertinent pros or cons for the accommodation.</li>
+			<br><br>
+			<h5>$130 PER DESTINATION<br><br>
+				WHAT'S INCLUDED:</h5>
+				<br>
+			<ul class="included-list">
+				<li>Everything in in the Air Travel Planning package and the Accommodations Planning package.
+				A handful of flight options based on your priorities (cost, total travel time, and the number of flights).</li>
 				<li>Details about the surrounding areas.</li>
 				<li>Any visa requirements for entry to the country.</li>
 				<li>All of the basics for your destination, including exchange rates, language(s) spoken, if the water is safe to drink, and information for getting cell service.</li>
 				<li>All of your trip information is provided in a convenient electronic format.</li>
 			</ul>
 		</div>
+		<br><br>
 	</article>
 	<!-- Deluxe travel planning -->
 	<article class="services-container">
-		<header class="services-left">
+		<header class="services-cell services-cell services-left">
+			<br>
 			<h3>DELUXE TRAVEL PLANNING</h3>
 			<img src="images/deluxe-icon.png" alt="black and white icon of beach with umbrella and ball">
 		</header>
-		<div class="services-right">
-			<h4>This full-service travel planning package includes all of the Mid Level services, plus: transportation information, activities/sightseeing information, dining information, 30-minute phone consultation, travel resources/apps, and more</h4>
+		<div class="services-cell services-cell services-right">
+			<h4>Deluxe Travel Planning Package: This full-service travel planning package includes all of the planning for your next trip!</h4>
 			<p>Would you prefer to have help with researching and planning all aspects of your trip? No problem, that's what I'm here for!</p>
-			<p>With this full-service travel planning package, I get to really dig in and provide you with everything you'll need to go on your vacation. All you'll need to do is buy your tickets, book your accommodation, and pack your bag!</p>
-			<p>I love exceeding my clients' expectations, and this full-service package lets me really dig in and find the hidden gems and share them with you. And, it's not unusual for me to throw in one or two little extras that I like to call my wildcards.</p>
-			<p>With this travel planning package, I will take care of researching all of the details for your trip. I'll save you an incredible amount of time and frustration. And, most importantly, we can make your trip a reality.</p>
-			
-			<h5>PRICES START AT $225 PER DESTINATION</h5>
+			<br>
 			<button class="button" onclick="#">I'M INTERESTED!</button>
-			<h5>WHAT'S INCLUDED</h5>
-			<ul>
-				<li>A 30-minute phone consultation with me where we can discuss your vision for your trip, your priorities, and concerns.</li>
-				<li>A handful of flight options based on your priorities (cost, total travel time, and the number of flights).</li>
-				<li>The pros and cons of the different fights/airlines.</li>
-				<li>Suggestions on when to purchase airfare.</li>
-				<li>A carefully curated list of five accommodations, based on your wants and needs. It includes contact information, pricing, features, and amenities for each accommodation, as well as any pertinent pros or cons for the accommodation.</li>
-				<li>Details about the surrounding areas.</li>
-				<li>Any visa requirements for entry to the country.</li>
-				<li>All of the basics for your destination, including exchange rates, language(s) spoken, if the water is safe to drink, and information for getting cell service.</li>
+			<br><br>
+			<h5>PRICES START AT $225 PER DESTINATION<br><br>
+				WHAT'S INCLUDED:</h5>
+				<br>
+			<ul class="included-list">
+				<li>Everything in the Standard Travel Planning package.
 				<li>Information on local customs.</li>
 				<li>Activities and sightseeing recommendations based on your interests.</li>
 				<li>Food and dining recommendations.</li>
 				<li>Transportation to and from your destination airport.</li>
-				<li>Maps</li>
-				<li>Suggested travel resources and apps.</li>
+				<li>Maps, suggested travel resources and apps.</li>
 				<li>All of your trip information is provided in a convenient electronic format.</li>
 			</ul>
 		</div>
-		
+		<br><br>
 	</article>
 	<!-- Digital nomad -->
 	<article class="services-container">
-		<header class="services-left">
+		<header class="services-cell services-left">
+			<br>
 			<h3>DIGITAL NOMAD TRAVEL PLANNING</h3>
 			<img src="images/laptop-icon.png" alt="black and white icon of a laptop">
 		</header>
-		<div class="services-right">
-			<h4>I'll research all of the logistics for your next destination: transportation/flights, visas, destination basics, accommodations, co-working spaces, day trips, and more!</h4>
-			<p>Your time is a limited resource and it's valuable. Let me help you to make the best use of your time by taking the chore of travel planning off your plate so that you can focus on your own business. For this digital nomad package, I will handle all of the time-consuming research and planning that you normally have to do whenever you change locations.</p>
-			
-			<h5>$175 PER DESTINATION</h5>
+		<div class="services-cell services-right">
+			<h4>Nomad Travel Planning Package: I'll research all of the logistics for your next destination!</h4>
+			<p>Your time is a limited resource and it's valuable. Let me help you to make the best use of your time by taking the chore of travel planning off your plate so that you can focus on your own business.</p>
+			<br>
 			<button class="button" onclick="#">I'M INTERESTED!</button>
-			<h5>WHAT'S INCLUDED</h5>
-			<ul>
-				<li>A handful of flight (or other transportation) options for how to get to your next destination. These options will be based on your priorities (cost, total travel time, and the number of flights, etc.).</li>
-				<li>The pro and cons of the different travel routes/methods.</li>
-				<li>A carefully curated list of five accommodations, based on your wants and needs. It includes contact information, pricing, features, and amenities for each accommodation, as well as any pertinent pros or cons for the accommodation.</li>
+			<br><br>
+			<h5>$225 PER DESTINATION<br><br>
+				WHAT'S INCLUDED:</h5>
+			<br>
+			<ul class="included-list">
+				<li>A handful of transportation options for getting to your destination.</li>
+				<li>A curated list of five accommodations.</li>
 				<li>Any visa requirements for entry.</li>
 				<li>All of the basics for your destination, including exchange rates, language(s) spoken, if the water is safe to drink, and information for getting cell service.</li>
 				<li>Information on local customs.</li>
 				<li>Information on co-working spaces.</li>
 				<li>Several cool day trips and/or sights to check out.</li>
-				<li> Transportation to and from your destination airport.</li>
 				<li>All of your trip information is provided in a convenient electronic format.</li>
 			</ul>
 		</div>
-		
 	</article>
+
 	</section>
 
 	<footer>
