--- a/home.html
+++ b/home.html
@@ -5,6 +5,15 @@
 	<title>Teacup Woozy | Personalized Travel Planning | Home</title>
 	<link href="https://fonts.googleapis.com/css?family=Montserrat:300,400" rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="tw.css">
+	<!-- Global site tag (gtag.js) - Google Analytics -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-107564560-1"></script>
+	<script>
+	  window.dataLayer = window.dataLayer || [];
+	  function gtag(){dataLayer.push(arguments);}
+	  gtag('js', new Date());
+
+	  gtag('config', 'UA-107564560-1');
+	</script>
 </head>
 <body>
 	<header id="nav-header">
