comment out current nav and associated css

--- a/home.html
+++ b/home.html
@@ -22,7 +22,7 @@
 			<span>personalized travel planning</span></h1>
 		</div>
 
-		<nav id="nav-container">
+		<!-- <nav id="nav-container">
 			<a href="#" id="menu-icon"></a>
 			<ul>
 				<li class="nav-menu"><a href="home.html">Home</a></li>
@@ -31,7 +31,7 @@
 				<li class="nav-menu"><a href="about.html">About</a></li>
 				<li class="nav-menu"><a href="contact.html">Contact</a></li>
 			</ul>
-		</nav>	
+		</nav>	 -->
 	</header>
 
 	<!-- Main content -->
